feat: 添加TS4和TS5测试项目并更新包版本至0.8.11

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ dist-ssr
 # VitePress cache and build output
 .vitepress/cache
 .vitepress/dist
+.test-ts4-project/dist
+.test-ts4-project/node_modules
+.test-ts5-project/dist
+.test-ts5-project/node_modules
+
