--- a/packages/base-tools-web/package.json
+++ b/packages/base-tools-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-web",
-  "version": "0.8.9",
+  "version": "0.8.11",
   "sideEffects": false,
   "description": "Independent Web utilities package built from src/web.",
   "keywords": [
@@ -10,7 +10,7 @@
     "thin-wrapper"
   ],
   "license": "MIT",
-  "main": "./index.js",
+  "main": "./index.cjs",
   "module": "./index.js",
   "types": "./index.d.ts",
   "exports": {
@@ -32,27 +32,21 @@
       "require": "./index.cjs",
       "default": "./index.js"
     },
-    "./dist/*": {
-      "types": "./dist/*.d.ts",
-      "import": "./dist/*.js",
-      "require": "./dist/*.cjs",
-      "default": "./dist/*.js"
-    },
     "./package.json": "./package.json"
   },
   "typesVersions": {
     "*": {
-      "*": [
-        "./dist/*"
-      ],
       "index": [
-        "./dist/index.d.ts"
+        "./index.d.ts"
       ]
     }
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "index.d.ts",
+    "index.js",
+    "index.cjs"
   ],
   "dependencies": {},
   "publishConfig": {
