refactor(event): 使用 mitt 重构事件总线实现

--- a/packages/base-tools-ts/package.json
+++ b/packages/base-tools-ts/package.json
@@ -34,7 +34,8 @@
     "lodash-es": "^4.17.21",
     "@types/lodash-es": "^4.17.12",
     "bignumber.js": "^9.1.2",
-    "dayjs": "^1.11.19"
+    "dayjs": "^1.11.19",
+    "mitt": "^3.0.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
