--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "axios": "^1.13.1",
     "bignumber.js": "^9.1.2",
     "dayjs": "^1.11.19",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "mitt": "^3.0.1"
   },
   "typesVersions": {
     "*": {
