--- a/packages/base-tools-ts/package.json
+++ b/packages/base-tools-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-ts",
-  "version": "0.9.1",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent TS utilities package built from src/ts.",
   "keywords": [
@@ -30,7 +30,8 @@
     "index.cjs",
     "base-tools-ts.umd.global.js",
     "base-tools-ts.umd.global.js.map",
-    "README.md"
+    "README.md",
+    "src"
   ],
   "dependencies": {
     "lodash-es": "^4.17.21",
