--- a/packages/base-tools-uni/package.json
+++ b/packages/base-tools-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-uni",
-  "version": "0.9.1",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent Uni-app utilities package built from src/uni.",
   "keywords": [
@@ -25,7 +25,8 @@
     "index.d.ts",
     "index.js",
     "index.cjs",
-    "README.md"
+    "README.md",
+    "src"
   ],
   "dependencies": {},
   "publishConfig": {
