--- a/packages/base-tools-vue/package.json
+++ b/packages/base-tools-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-vue",
-  "version": "0.9.1",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent Vue utilities package built from src/vue.",
   "keywords": [
@@ -25,7 +25,8 @@
     "index.d.ts",
     "index.js",
     "index.cjs",
-    "README.md"
+    "README.md",
+    "src"
   ],
   "dependencies": {
     "@vueuse/core": "^14.0.0"
