--- a/packages/base-tools-web/package.json
+++ b/packages/base-tools-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-web",
-  "version": "0.9.1",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent Web utilities package built from src/web.",
   "keywords": [
@@ -27,7 +27,8 @@
     "index.js",
     "index.cjs",
     "base-tools-web.umd.global.js",
-    "base-tools-web.umd.global.js.map"
+    "base-tools-web.umd.global.js.map",
+    "src"
   ],
   "dependencies": {},
   "publishConfig": {
