feat: 添加UMD构建支持并优化项目结构
refactor(EventBus): 使用mitt重构事件总线实现
docs: 更新文档说明非TS环境使用方式
build: 调整tsup配置生成UMD格式文件
chore: 统一子包版本号为1.0.0
test: 新增多种环境测试项目(HTML5/Vue2/TS4/TS5)
ci: 添加版本号自动更新脚本

--- a/packages/base-tools-uni/package.json
+++ b/packages/base-tools-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-uni",
-  "version": "0.8.9",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent Uni-app utilities package built from src/uni.",
   "keywords": [
@@ -10,49 +10,23 @@
     "thin-wrapper"
   ],
   "license": "MIT",
-  "main": "./index.js",
+  "main": "./index.cjs",
   "module": "./index.js",
   "types": "./index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./index": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./index.js": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./dist/*": {
-      "types": "./dist/*.d.ts",
-      "import": "./dist/*.js",
-      "require": "./dist/*.cjs",
-      "default": "./dist/*.js"
-    },
-    "./package.json": "./package.json"
-  },
   "typesVersions": {
     "*": {
-      "*": [
-        "./dist/*"
-      ],
       "index": [
-        "./dist/index.d.ts"
+        "./index.d.ts"
       ]
     }
   },
   "files": [
     "dist",
-    "README.md"
+    "index.d.ts",
+    "index.js",
+    "index.cjs",
+    "README.md",
+    "src"
   ],
   "dependencies": {},
   "publishConfig": {
