--- a/packages/base-tools-ts/package.json
+++ b/packages/base-tools-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-ts",
-  "version": "0.8.9",
+  "version": "0.9.3",
   "sideEffects": false,
   "description": "Independent TS utilities package built from src/ts.",
   "keywords": [
@@ -10,36 +10,9 @@
     "thin-wrapper"
   ],
   "license": "MIT",
-  "main": "./index.js",
+  "main": "./index.cjs",
   "module": "./index.js",
   "types": "./index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./index": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./index.js": {
-      "types": "./index.d.ts",
-      "import": "./index.js",
-      "require": "./index.cjs",
-      "default": "./index.js"
-    },
-    "./dist/*": {
-      "types": "./dist/*.d.ts",
-      "import": "./dist/*.js",
-      "require": "./dist/*.cjs",
-      "default": "./dist/*.js"
-    },
-    "./package.json": "./package.json"
-  },
   "typesVersions": {
     "*": {
       "*": [
@@ -52,13 +25,20 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "index.d.ts",
+    "index.js",
+    "index.cjs",
+    "base-tools-ts.umd.global.js",
+    "base-tools-ts.umd.global.js.map",
+    "README.md",
+    "src"
   ],
   "dependencies": {
     "lodash-es": "^4.17.21",
     "@types/lodash-es": "^4.17.12",
     "bignumber.js": "^9.1.2",
-    "dayjs": "^1.11.19"
+    "dayjs": "^1.11.19",
+    "mitt": "^3.0.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
