feat: 添加React和Vue工具库依赖并更新包配置0.9.8

--- a/packages/base-tools-react/package.json
+++ b/packages/base-tools-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-react",
-  "version": "0.9.6",
+  "version": "0.9.8",
   "sideEffects": false,
   "description": "Independent React utilities package built from src/react.",
   "keywords": [
@@ -10,21 +10,18 @@
     "thin-wrapper"
   ],
   "license": "MIT",
-  "main": "./index.cjs",
-  "module": "./index.js",
-  "types": "./index.d.ts",
-  "typesVersions": {
-    "*": {
-      "index": [
-        "./index.d.ts"
-      ]
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": [
     "dist",
-    "index.d.ts",
-    "index.js",
-    "index.cjs",
     "README.md",
     "src"
   ],
