build: 修复源码跳转0.9.9

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,9 @@
     "moduleResolution": "node",
     "declaration": true,
     "declarationMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "src",
+    "noEmit": false
   },
   "exclude": ["node_modules", "dist", "tests"]
 }
