--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@dcloudio/types": "^3.4.28",
-    "@types/lodash": "^4.14.202",
     "@types/node": "^24.10.0",
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
@@ -104,13 +103,12 @@
     ]
   },
   "dependencies": {
-    "@types/lodash-es": "^4.17.7",
     "@vueuse/core": "^14.0.0",
     "ahooks": "^3.9.6",
     "axios": "^1.13.1",
     "bignumber.js": "^9.1.2",
     "dayjs": "^1.11.19",
-    "lodash-es": "^4.17.21",
+    "es-toolkit": "^1.42.0",
     "mitt": "^3.0.1"
   },
   "typesVersions": {
