--- a/packages/base-tools-vue/package.json
+++ b/packages/base-tools-vue/package.json
@@ -6,8 +6,7 @@
   "keywords": [
     "base-tools",
     "vue",
-    "utilities",
-    "thin-wrapper"
+    "utilities"
   ],
   "license": "MIT",
   "main": "./dist/index.cjs",
