--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "publish:all": "npm run publish:ts && npm run publish:web && npm run publish:uni && npm run publish:react && npm run publish:vue",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "tag": "node scripts/tag-release.mjs"
   },
   "exports": {
     "./ts": {
