feat(scripts): 添加alpha版本发布和版本管理功能

--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "version:major": "node scripts/version-bump.mjs major",
     "version:minor": "node scripts/version-bump.mjs minor",
     "version:patch": "node scripts/version-bump.mjs patch",
+    "version:alpha": "node scripts/version-bump.mjs alpha",
     "publish:ts": "cd packages/base-tools-ts && npm publish --access public --registry https://registry.npmjs.org",
     "publish:web": "cd packages/base-tools-web && npm publish --access public --registry https://registry.npmjs.org",
     "publish:uni": "cd packages/base-tools-uni && npm publish --access public --registry https://registry.npmjs.org",
     "publish:react": "cd packages/base-tools-react && npm publish --access public --registry https://registry.npmjs.org",
     "publish:vue": "cd packages/base-tools-vue && npm publish --access public --registry https://registry.npmjs.org",
     "publish:all": "npm run publish:ts && npm run publish:web && npm run publish:uni && npm run publish:react && npm run publish:vue",
+    "publish:alpha": "node scripts/publish-alpha.mjs",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
