--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools",
-  "version": "1.0.1",
+  "version": "1.1.1-alpha.0",
   "type": "module",
   "sideEffects": false,
   "scripts": {
@@ -14,12 +14,17 @@
     "version:patch": "node scripts/version-bump.mjs patch",
     "version:alpha": "node scripts/version-bump.mjs alpha",
     "publish:ts": "cd packages/base-tools-ts && npm publish --access public --registry https://registry.npmjs.org",
+    "publish:ts:alpha": "cd packages/base-tools-ts && npm publish --access public --tag alpha --registry https://registry.npmjs.org",
     "publish:web": "cd packages/base-tools-web && npm publish --access public --registry https://registry.npmjs.org",
+    "publish:web:alpha": "cd packages/base-tools-web && npm publish --access public --tag alpha --registry https://registry.npmjs.org",
     "publish:uni": "cd packages/base-tools-uni && npm publish --access public --registry https://registry.npmjs.org",
+    "publish:uni:alpha": "cd packages/base-tools-uni && npm publish --access public --tag alpha --registry https://registry.npmjs.org",
     "publish:react": "cd packages/base-tools-react && npm publish --access public --registry https://registry.npmjs.org",
+    "publish:react:alpha": "cd packages/base-tools-react && npm publish --access public --tag alpha --registry https://registry.npmjs.org",
     "publish:vue": "cd packages/base-tools-vue && npm publish --access public --registry https://registry.npmjs.org",
+    "publish:vue:alpha": "cd packages/base-tools-vue && npm publish --access public --tag alpha --registry https://registry.npmjs.org",
     "publish:all": "npm run publish:ts && npm run publish:web && npm run publish:uni && npm run publish:react && npm run publish:vue",
-    "publish:alpha": "node scripts/publish-alpha.mjs",
+    "publish:all:alpha": "node scripts/publish-alpha.mjs",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
