--- a/packages/base-tools-web/package.json
+++ b/packages/base-tools-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-web",
-  "version": "1.0.1",
+  "version": "1.1.1-alpha.0",
   "sideEffects": false,
   "description": "Independent Web utilities package built from src/web.",
   "keywords": [
