--- a/packages/base-tools-ts/package.json
+++ b/packages/base-tools-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-ts",
-  "version": "1.0.1-alpha.10",
+  "version": "1.0.2",
   "sideEffects": false,
   "description": "Independent TS utilities package built from src/ts.",
   "keywords": [
