--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools",
-  "version": "1.0.2",
+  "version": "1.0.2-alpha.0",
   "type": "module",
   "sideEffects": false,
   "scripts": {
