--- a/packages/base-tools-react/package.json
+++ b/packages/base-tools-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-react",
-  "version": "1.1.0-alpha.0",
+  "version": "1.1.0",
   "sideEffects": false,
   "description": "Independent React utilities package built from src/react.",
   "keywords": [
