--- a/packages/base-tools-web/package.json
+++ b/packages/base-tools-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-web",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "sideEffects": false,
   "description": "Independent Web utilities package built from src/web.",
   "keywords": [
@@ -24,7 +24,9 @@
     "README.md",
     "src"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@base-web-kits/base-tools-ts": "^1.1.2"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   }
