--- a/packages/base-tools-uni/package.json
+++ b/packages/base-tools-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-uni",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "sideEffects": false,
   "description": "Independent Uni-app utilities package built from src/uni.",
   "keywords": [
@@ -24,9 +24,7 @@
     "README.md",
     "src"
   ],
-  "dependencies": {
-    "@base-web-kits/base-tools-ts": "^1.1.2"
-  },
+  "dependencies": {},
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   }
