--- a/packages/base-tools-web/package.json
+++ b/packages/base-tools-web/package.json
@@ -27,6 +27,14 @@
   "dependencies": {
     "@base-web-kits/base-tools-ts": "^1.1.5"
   },
+  "peerDependencies": {
+    "axios": ">=1.0.0"
+  },
+  "peerDependenciesMeta": {
+    "axios": {
+      "optional": true
+    }
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   }
