--- a/packages/base-tools-uni/package.json
+++ b/packages/base-tools-uni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-uni",
-  "version": "1.1.16",
+  "version": "1.1.18-alpha.0",
   "sideEffects": false,
   "description": "Independent Uni-app utilities package built from src/uni.",
   "keywords": [
