--- a/packages/base-tools-vue/package.json
+++ b/packages/base-tools-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-vue",
-  "version": "1.1.16",
+  "version": "1.1.18-alpha.0",
   "sideEffects": false,
   "description": "Independent Vue utilities package built from src/vue.",
   "keywords": [
