--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "tag": "node scripts/tag-release.mjs"
+    "tag": "node scripts/tag-release.mjs",
+    "update:es-toolkit": "npx tsx scripts/update-es-toolkit-exports.ts"
   },
   "exports": {
     "./ts": {
