--- a/packages/base-tools-vue/package.json
+++ b/packages/base-tools-vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@base-web-kits/base-tools-vue",
-  "version": "1.2.0-alpha.0",
+  "version": "1.2.0",
   "sideEffects": false,
   "description": "Independent Vue utilities package built from src/vue.",
   "keywords": [
@@ -25,10 +25,9 @@
     "src"
   ],
   "dependencies": {
-    "@vueuse/core": "^14.0.0"
+    "@vueuse/core": "^14.1.0"
   },
   "peerDependencies": {
-    "@vueuse/core": "^14.0.0",
     "vue": ">=3.5.0"
   },
   "publishConfig": {
