--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "publish:all": "npm run publish:ts && npm run publish:web && npm run publish:uni && npm run publish:react && npm run publish:vue",
     "publish:all:alpha": "node scripts/publish-alpha.mjs",
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
+    "docs:llms": "npx tsx scripts/generate-llms-txt.ts",
+    "docs:build": "npm run docs:llms && vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "tag": "node scripts/tag-release.mjs",
     "update:es-toolkit": "npx tsx scripts/re-export/update-es-toolkit-exports.ts",
